# Qhyni

./: CMakeLists.txt  README.md
src/: AudioStreamer.cpp  AudioStreamer.h  ChatAPIWorker.cpp  ChatAPIWorker.h  HighlightTableWidget.cpp  HighlightTableWidget.h  HyniWindow.cpp  HyniWindow.h  PngMonitor.h  Utils.h  main.cpp  utils.h
